name:                gsioc
version:             0.0.1.0
synopsis:            Gilson GSIOC protocol implementation
-- description:         
license:             MIT
-- license-file:        LICENSE
author:              KblCb
maintainer:          ndtimofeev@gmail.com
-- copyright:           
category:            System, Hardware, Science
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag thermometer
  description: Enable usb thermometer support
  default:     False

library
  ghc-options:         -Wall -O2
  other-modules:
    Control.Monad.Catch.Utils
  exposed-modules:
    Control.Concurrent.Utils,
    Control.Concurrent.SigVar,
    Control.Monad.Action,
    Control.Monad.Resumable,
    Control.Monad.Statemachine,
    System.Hardware.GSIOC,
    System.Hardware.GSIOC.Raw,
    System.Hardware.Gilson.OrbitalShaker,
    System.Hardware.Gilson.Pump306,
    System.Hardware.Gilson.VALVEMATE,
    System.Hardware.Gilson.SyringePump402,
    System.Hardware.Gilson.SystemInterface506C,
    System.Hardware.Gilson.QuadZ215,
    System.Hardware.Vici.MicroValveActuator

  default-extensions:
    ExistentialQuantification,
    GeneralizedNewtypeDeriving,
    DeriveDataTypeable,
    MultiParamTypeClasses,
    FunctionalDependencies,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    StandaloneDeriving,
    ConstraintKinds,
    Rank2Types

  build-depends:
    async,
    base,
    time,
    binary,
    bytestring,
    exceptions,
    mtl,
    serialport,
    stm,
    transformers,
    vector

  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag( thermometer )
    build-depends: usb
    exposed-modules: System.Hardware.Thermometer

