name:                remote-action
version:             0.0.3.0
synopsis:            Monad for thread-safe remote device interaction
-- description:         
license:             MIT
author:              KblCb
maintainer:          ndtimofeev@gmail.com
-- copyright:           
category:            System, Hardware, Science
build-type:          Simple
cabal-version:       >=1.10

flag thermometer
  description: Enable usb thermometer support
  default:     False

flag socat
  description: Enable remoat serialport connection over socat
  default:     False

flag debug
  description: Enable extra dependency for debuging
  default:     False

library
  ghc-options: -Wall -O2 -fno-warn-orphans -fno-warn-unused-do-bind -fdefer-typed-holes -fno-warn-typed-holes
  other-modules:
    Control.Monad.Action.Internal
  exposed-modules:
    Action2,
    Control.Concurrent.Utils,
    Control.Monad.Action,
    Control.Monad.Accum,
    Data.Property,
--    Control.Monad.Resumable,
--    Control.Monad.RemoteMonad,
    Control.Monad.StaticScope,
--    Control.Monad.Statemachine,
    System.Hardware.GSIOC,
    System.Hardware.GSIOC.Raw,
--    System.Hardware.Gilson.Devices,
--    System.Hardware.Gilson.OrbitalShaker,
--    System.Hardware.Gilson.Pump306,
--    System.Hardware.Gilson.VALVEMATE,
--    System.Hardware.Gilson.SyringePump402,
--    System.Hardware.Gilson.SystemInterface506C,
    System.Hardware.Gilson.QuadZ215
--    System.Hardware.Vici.MicroValveActuator

  default-extensions:
    TypeFamilies,
    ExistentialQuantification,
    GeneralizedNewtypeDeriving,
    DeriveDataTypeable,
    DeriveFoldable,
    DeriveTraversable,
    MultiParamTypeClasses,
    FunctionalDependencies,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    ScopedTypeVariables,
    StandaloneDeriving,
    ConstraintKinds,
    RankNTypes

  build-depends:
    async,
    base,
    bytestring,
    exceptions,
    mtl,
    serialport,
    parsec,
    stm,
    transformers

  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag( debug )
    build-depends: QuickCheck, random
    exposed-modules: Data.Property.Test
