name:                remote-action
version:             0.0.3.0
synopsis:            Monad for thread-safe remote device interaction
-- description:         
license:             MIT
author:              KblCb
maintainer:          ndtimofeev@gmail.com
-- copyright:           
category:            System, Hardware, Science
build-type:          Simple
cabal-version:       >=1.10

flag thermometer
  description: Enable usb thermometer support
  default:     False

flag socat
  description: Enable remoat serialport connection over socat
  default:     False

flag debug
  description: Enable extra dependency for debuging
  default:     False

library
--  ghc-options: -Wall -fprof-auto -fno-warn-orphans -fno-warn-unused-do-bind -fprint-potential-instances
  exposed-modules:
    Control.Concurrent.Utils,
    Control.Monad.Action,
    Control.Monad.Accum,
    Control.Monad.Exception,
    Control.Monad.Injectable,
    Control.Monad.Regions,
    Data.Flist,
    Data.Property,
--    Control.Monad.Resumable,
    System.Hardware.GSIOC,
    System.Hardware.GSIOC.Raw
--    System.Hardware.Gilson.OrbitalShaker,
--    System.Hardware.Gilson.Pump306,
--    System.Hardware.Gilson.VALVEMATE,
--    System.Hardware.Gilson.SyringePump402,
--    System.Hardware.Gilson.SystemInterface506C,
    System.Hardware.Gilson.QuadZ215
--    System.Hardware.Vici.MicroValveActuator

  default-extensions:
    TypeFamilies,
    ExistentialQuantification,
    GeneralizedNewtypeDeriving,
    DeriveDataTypeable,
    DeriveFoldable,
    DeriveTraversable,
    MultiParamTypeClasses,
    FunctionalDependencies,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    ScopedTypeVariables,
    StandaloneDeriving,
    ConstraintKinds,
    RankNTypes,
    DefaultSignatures,
    DataKinds

  build-depends:
    async,
    base,
    bytestring,
    exceptions,
    mtl,
    serialport,
    parsec,
    stm,
    transformers

  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test
  type:                detailed-0.9
  test-module:         Test
--  ghc-options: -Wall -fprof-auto -fno-warn-orphans -fno-warn-unused-do-bind -fprint-potential-instances
  other-modules:
--  exposed-modules:
    Test.Control.Monad.Action,
    Test.Data.Property,
    Test.System.Hardware.Gilson.QuadZ215
  hs-source-dirs:      test
  build-depends:
    base,
    exceptions,
    mtl,
    Cabal,
    stm,
    random,
    remote-action,
    transformers,
    serialport,
    QuickCheck
  default-language:    Haskell2010
  default-extensions:
    TypeFamilies,
    ExistentialQuantification,
    GADTs,
    GeneralizedNewtypeDeriving,
    DeriveDataTypeable,
    DeriveFoldable,
    DeriveTraversable,
    DataKinds,
    MultiParamTypeClasses,
    FunctionalDependencies,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    ScopedTypeVariables,
    StandaloneDeriving,
    ConstraintKinds,
    TypeOperators,
    RankNTypes
